Solve dashboard overflow issue with sidebar scroller

--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -293,6 +293,7 @@ input:checked + .slider:before {
 }
 
 #sidebar-logo {
+ 
   content: url("../Images/123.svg");
 }
 /* #sidebar-logo-short {
@@ -483,3 +484,16 @@ input:checked + .slider:before {
 }
 
 /* step form css end */
+
+
+.nk-sidebar {
+  width: 15.1875rem;
+  padding-bottom: 112px;
+  height: 104%;
+  position: absolute;
+  top: 5rem;
+  padding-top: 0;
+  z-index: 99;
+  background: #fff;
+  transition: all 0.2s ease;
+}
